# Renesas_CC_compilers_tips_for_CMake_with_IoT_SDKs

./: README.md
afr-v202107.00-rx-1.0.1-ccrx/: CMakeLists.txt  CMakeSettings.json
afr-v202107.00-rx-1.0.1-ccrx-cmake-files-workaround/tools/cmake/CMake-Compiler-RENESAS/Modules/Compiler/: RENESAS-CompilerWrapper.cmake
afr-v202107.00-rx-1.0.1-ccrx-cmake-files-workaround/tools/cmake/toolchains/: cc-rx.cmake
afr-v202107.00-rx-1.0.1-ccrx-cmake-files-workaround/vendors/renesas/boards/rx65n-rsk/: CMakeLists.txt
afr-v202107.00-rx-1.0.1-ccrx-cmake-files-workaround/vendors/renesas/boards/rx65n-rsk/ports/pkcs11/: core_pkcs11_pal.c
afr-v202107.00-rx-1.0.1-ccrx/projects/renesas/rx65n-rsk/cmake-build/aws_demos/: rebuild.bat  rebuild_by_make.bat
afr-v202107.00-rx-1.0.1-ccrx/projects/renesas/vendors/renesas/boards/rx65n-rsk/aws_demos/src/smc_gen/general/: r_cg_hardware_setup.c  r_cg_userdefine.h
afr-v202107.00-rx-1.0.1-ccrx/tools/cmake/toolchains/: cc-rx.cmake  find_compiler.cmake
afr-v202107.00-rx-1.0.1-ccrx/vendors/renesas/amazon_freertos_common/: entropy_hardware_poll.c  serial_term_uart.c
afr-v202107.00-rx-1.0.1-ccrx/vendors/renesas/boards/rx65n-rsk/: CMakeLists.txt
afr-v202107.00-rx-1.0.1-ccrx/vendors/renesas/boards/rx65n-rsk/aws_demos/application_code/: main.c
afr-v202107.00-rx-1.0.1-ccrx/vendors/renesas/boards/rx65n-rsk/aws_demos/application_code/renesas_code/: main_task.c
afr-v202107.00-rx-1.0.1-ccrx/vendors/renesas/boards/rx65n-rsk/aws_demos/config_files/: FreeRTOSApplicationConfig.h
afr-v202107.00-rx-1.0.1-ccrx/vendors/renesas/boards/rx65n-rsk/aws_demos/src/smc_gen/general/: r_cg_macrodriver.h  r_smc_entry.h  r_smc_interrupt.c
afr-v202107.00-rx-1.0.1-ccrx/vendors/renesas/boards/rx65n-rsk/aws_demos/src/smc_gen/r_config/: r_bsp_config.h
afr-v202107.00-rx-1.0.1-ccrx/vendors/renesas/boards/rx65n-rsk/aws_tests/application_code/: main.c
afr-v202107.00-rx-1.0.1-ccrx/vendors/renesas/boards/rx65n-rsk/aws_tests/src/smc_gen/general/: r_smc_interrupt.h
afr-v202107.00-rx-1.0.1-ccrx/vendors/renesas/configuration/: CKRX65N_scfg.ftl  FreeRTOS_Application_v0.1.8_extend.mdf  afr-v202107.00-rx-1.0.1.xml  setting.xml
afr-v202107.00-rx-1.0.1-ccrx/vendors/renesas/configuration/scfg_ck-rx65n_ccrx/: ck-rx65n-ryz014a_ccrx.scfg
afr-v202107.00-rx-1.0.1-ccrx/vendors/renesas/configuration/scfg_ck-rx65n_gcc/: ck-rx65n-ryz014a_gcc.scfg
afr-v202107.00-rx-1.0.1-ccrx/vendors/renesas/rx_driver_package/v133/r_bsp/board/generic_rx65n/: r_bsp_config_reference.h  r_bsp_rx_generic_rx65n_extend.mdf
afr-v202107.00-rx-1.0.1-ccrx/vendors/renesas/rx_driver_package/v133/r_bsp/mcu/all/: r_bsp_common.h  reset_program.S
afr-v202107.00-rx-1.0.1-ccrx/vendors/renesas/rx_driver_package/v133/r_irq_rx/src/: r_irq_rx_private.h
afr-v202107.00-rx-1.0.1-ccrx/vendors/renesas/rx_driver_package/v133/r_s12ad_rx/: r_s12ad_rx_if.h
afr-v202107.00-rx-1.0.1-ccrx/vendors/renesas/rx_driver_package/v133/r_s12ad_rx/src/: r_s12ad_rx_private.h
afr-v202107.00-rx-1.0.1-ccrx/vendors/renesas/rx_driver_package/v133/r_wifi_sx_ulpgn/: r_wifi_sx_ulpgn_if.h
afr-v202107.00-rx-1.0.1-ccrx/vendors/renesas/rx_driver_package/v133/r_wifi_sx_ulpgn/src/: r_wifi_sx_ulpgn_api.c
aziot-azrtos-v6.2.0-ccrx-cmake-files-workaround/Renesas/RSK_RX65N_2MB_CCRX/: CMakeLists.txt
aziot-azrtos-v6.2.0-ccrx-cmake-files-workaround/Renesas/RSK_RX65N_2MB_CCRX/app/: CMakeLists.txt
aziot-azrtos-v6.2.0-ccrx-cmake-files-workaround/cmake/: renesas-rx-ccrx-toolchain.cmake  utilities.cmake
aziot-azrtos-v6.2.0-ccrx-cmake-files-workaround/cmake/CMake-Compiler-RENESAS/Modules/Compiler/: RENESAS-FindBinUtils.cmake
aziot-azrtos-v6.2.0-ccrx-cmake-files-workaround/shared/lib/threadx/ports/rxv2/ccrx/: CMakeLists.txt
aziot-azrtos-v6.2.0-ccrx/Renesas/RSK_RX65N_2MB_CCRX/: CMakeSettings.json
aziot-azrtos-v6.2.0-ccrx/Renesas/RSK_RX65N_2MB_CCRX/app/startup/ccrx/: linker_command.sub
aziot-azrtos-v6.2.0-ccrx/Renesas/RSK_RX65N_2MB_CCRX/lib/rx_driver_package/: CMakeLists.txt  RSK_RX65N_2MB.scfg
aziot-azrtos-v6.2.0-ccrx/Renesas/RSK_RX65N_2MB_CCRX/lib/rx_driver_package/src/smc_gen/Config_PORT/: Config_PORT.c  Config_PORT.h  Config_PORT_user.c
aziot-azrtos-v6.2.0-ccrx/Renesas/RSK_RX65N_2MB_CCRX/lib/rx_driver_package/src/smc_gen/Config_SCI8/: Config_SCI8.c  Config_SCI8.h  Config_SCI8_user.c
aziot-azrtos-v6.2.0-ccrx/Renesas/RSK_RX65N_2MB_CCRX/lib/rx_driver_package/src/smc_gen/general/: r_cg_hardware_setup.c  r_cg_port.h  r_cg_sci.h  r_smc_entry.h  r_smc_interrupt.c
aziot-azrtos-v6.2.0-ccrx/Renesas/RSK_RX65N_2MB_CCRX/lib/rx_driver_package/src/smc_gen/r_config/: r_bsp_config.h
aziot-azrtos-v6.2.0-ccrx/Renesas/RSK_RX65N_2MB_CCRX/lib/rx_driver_package/src/smc_gen/r_pincfg/: Pin.c
aziot-azrtos-v6.2.0-ccrx/Renesas/RSK_RX65N_2MB_CCRX/projects/e2studio/: rsk_rx65n_2mb DebugOnly.launch
aziot-azrtos-v6.2.0-ccrx/Renesas/RSK_RX65N_2MB_CCRX/tools/: rebuild.bat  rebuild_by_make.bat
aziot-azrtos-v6.2.0-ccrx/cmake/: renesas-rx-ccrx-rx65n.cmake  renesas-rx-ccrx-toolchain.cmake
